# particle-life-simulator

./: CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
particle_life_simulator/: __init__.py  interactionmatrix.py  interactions.py  my_module.py  particles.py  physics.py  simulation.py
particle_life_simulator/tests/: test_interactions.py  test_particle_life_simulator.py
tests/: test_my_module.py
tests_von_marc/: interactionmatrix_test.py  particles_test.py  simulation_test.py
